@@ -13,4 +13,6 @@ sixtp-dom-generators.c sixtp-dom-parsers.c sixtp-stack.c		\
 sixtp-to-dom-parser.c sixtp-utils.c sixtp.c
 
 libgncmod_backend_file_la_LDFLAGS = -module
-libgncmod_backend_file_la_LIBADD = ${GLIB_LIBS} ${GNOME_XML_LIB} 
+libgncmod_backend_file_la_LIBADD = \
+   ${GLIB_LIBS} ${GNOME_XML_LIB}  \
+   -L../../engine -lgncmod-engine
